# hse-news

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  ruff.toml
algo/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
algo/migrations/: 0001_initial.py  0002_alter_result_options_alter_task_options_and_more.py
algo/static/algo/css/: main.css
algo/templates/algo/: empty_history.html  history.html  index.html  layout.html  task.html  task_result.html
hse_news/: asgi.py  settings.py  urls.py  wsgi.py
news/: forms.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py
news/static/news/css/: main.css
news/templates/news/: create.html  details_view.html  index.html  layout.html  moscow.html  news_home.html  price.html  sasha.html  sendarequest.html  tarkovsky.html
news_navig/: admin.py  apps.py  models.py  urls.py  views.py
news_navig/migrations/: 0001_initial.py
news_navig/static/news_navig/css/: main.css
news_navig/templates/news_navig/: create.html  details_view.html  index.html  layout.html  moscow.html  news_home.html  page.html  price.html  sasha.html  sendarequest.html  tarkovsky.html
