[tool.poetry]
name = "hse-news"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "hse_news"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
django = "^4.2.5"


[tool.poetry.group.dev.dependencies]
black = ">=23.3.0"
ruff = ">=0.0.261"
pre-commit = ">=3.2.2"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
